Fixed the alignment in product template where there is no description

--- a/views/css/front.css
+++ b/views/css/front.css
@@ -61,3 +61,7 @@
     height: 35px;
     width: 35px;
 }
+
+.blockreassurance_product p.block-title {
+    line-height: 40px;
+}
